--- a/practice.html
+++ b/practice.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>混雑状況</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>混雑分析</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
@@ -14,113 +15,219 @@
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
-      overflow-x: hidden;
     }
-
     header {
       background-color: #2c3e50;
       color: white;
-      position: relative;
     }
-
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
-
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
-
     .header-links {
       display: flex;
       gap: 20px;
     }
-
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
-
     .header-links a:hover {
       text-decoration: underline;
     }
-
-    /* ハンバーガーメニュー */
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
+    nav {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      background-color: #3498db;
+      text-align: center;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #fff;
     }
-
-    .menu-button span {
+    nav a {
+      padding: 12px 0;
       display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
-
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
       color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
-    }
-
-    .drawer.open {
-      left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
       text-decoration: none;
-      color: white;
       font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
+      border-right: 1px solid #fff;
     }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
+    nav a:last-child {
+      border-right: none;
     }
-
+    nav a.active {
+      background-color: #1f618d;
+    }
+    nav a:hover {
+      background-color: #2980b9;
+    }
     main {
-      max-width: 800px;
+      padding: 20px;
+      max-width: 1000px;
       margin: 0 auto;
-      padding: 30px 20px;
+    }
+    .filters {
+      margin-bottom: 20px;
+    }
+    .chart-container {
+      width: 100%;
+      height: 70vh;
+      overflow-x: auto;
+      background: #fff;
+      border-radius: 10px;
+      padding: 10px;
+    }
+    #details {
+      margin-top: 30px;
+      background-color: #f4f4f4;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background-color: #e0e0e0;
     }
 
-    h2 {
-      margin-top: 40px;
-      margin-bottom: 10px;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 5px;
-    }
+    .hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  width: 30px;
+  gap: 5px;
+}
+.hamburger div {
+  height: 4px;
+  background-color: white;
+  border-radius: 2px;
+}
+.drawer {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 220px;
+  height: 100%;
+  background-color: #2c3e50;
+  color: white;
+  padding-top: 60px;
+  transition: left 0.3s;
+  z-index: 1000;
+}
+.drawer.open {
+  left: 0;
+}
+.drawer a {
+  display: block;
+  padding: 12px 20px;
+  color: white;
+  text-decoration: none;
+}
+.drawer a:hover {
+  background-color: #34495e;
+}
+.drawer-backdrop {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+.drawer-backdrop.show {
+  display: block;
+}
 
-    p {
-      font-size: 16px;
-      margin: 8px 0;
-    }
-
-    #tables p {
-      font-size: 17px;
-    }
+/* レスポンシブ対応 */
+@media (max-width: 768px) {
+  nav {
+    display: none;
+  }
+  .hamburger {
+    display: flex;
+  }
+}
   </style>
+</head>
+<body>
+  <header>
+    <div class="header-bar">
+      <div class="header-title">店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
+    </div>
+    <nav>
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html" class="active">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>混雑傾向分析</h2>
+    <div class="drawer" id="drawerMenu">
+  <a href="index.html">ホーム</a>
+  <a href="map.html">店内マップ</a>
+  <a href="histogram.html" class="active">混雑状況可視化</a>
+  <a href="admin.html">待ち管理</a>
+  <a href="#">マニュアル</a>
+  <a href="#">ログアウト</a>
+</div>
+<div class="drawer-backdrop" id="drawerBackdrop"></div>
+
+    <div class="filters">
+      日付: <input type="date" id="datePicker">
+      時間単位: 
+      <select id="interval">
+        <option value="60">60分</option>
+        <option value="30">30分</option>
+        <option value="10">10分</option>
+      </select>
+      表示単位:
+      <select id="rangeType">
+        <option value="day" selected>日</option>
+        <option value="week">週</option>
+        <option value="month">月</option>
+      </select>
+        <button id="downloadCSV">CSVダウンロード</button>
+    </div>    
+    <div class="chart-container">
+      <canvas id="histogram"></canvas>
+    </div>
+    <div id="details">
+      <h3>詳細データ</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>日付</th>
+            <th>時間帯</th>
+            <th>テーブル番号</th>
+            <th>滞在時間</th>
+            <th>入店時間</th>
+            <th>退店時間</th>
+          </tr>
+        </thead>
+        <tbody id="logTableBody"></tbody>
+      </table>
+    </div>
+  </main>
 
   <script>
     const firebaseConfig = {
@@ -131,158 +238,207 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-    const tableCounts = {};
+    let chart;
 
-    function formatTimestamp(isoString) {
-      if (!isoString || typeof isoString !== "string") return "ー";
-      const date = new Date(isoString);
-      const options = {
-        timeZone: "Asia/Tokyo",
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit",
-        hour: "2-digit",
-        minute: "2-digit"
-      };
-      return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
-    }
+    function getDateRange(rangeType, baseDateStr) {
+      const baseDate = new Date(baseDateStr + "T00:00:00+09:00");
+      let start, end;
 
-    function calculateElapsedTime(isoString) {
-      if (!isoString) return "";
-      const start = new Date(isoString);
-      const now = new Date();
-      const diffMs = now - start;
-      if (diffMs < 0) return "";
-      const minutes = Math.floor(diffMs / 60000);
-      const hours = Math.floor(minutes / 60);
-      const remainingMinutes = minutes % 60;
-      return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
-    }
-
-    function updateTableDisplays() {
-      Object.keys(tableCounts).forEach(tableNum => {
-        const t = tableCounts[tableNum];
-        const currentCount = t.enter - t.exit;
-        const timeToShow = currentCount > 0 ? t.lastEnterTime : null;
-        const status = currentCount > 0 ? "利用中" : "空席";
-        const timeText = formatTimestamp(timeToShow);
-        const elapsed = currentCount > 0 ? `｜${calculateElapsedTime(timeToShow)}` : "";
-        const element = document.getElementById(`table${tableNum}-status`);
-        if (element) {
-          element.textContent = `${status}（${timeText}${elapsed}）`;
-        }
-      });
-    }
-
-    function countVisitors(snapshot) {
-      let entries = 0;
-      let exits = 0;
-      let waiting = 0;
-
-      for (let i = 1; i <= 9; i++) {
-        tableCounts[i.toString()] = {
-          enter: 0,
-          exit: 0,
-          lastEnterTime: null
-        };
+      if (rangeType === "day") {
+        start = new Date(baseDate);
+        end = new Date(baseDate);
+        end.setHours(23, 59, 59);
+      } else if (rangeType === "week") {
+        const day = baseDate.getDay();
+        const diff = day === 0 ? 6 : day - 1;
+        start = new Date(baseDate);
+        start.setDate(baseDate.getDate() - diff);
+        end = new Date(start);
+        end.setDate(start.getDate() + 6);
+        end.setHours(23, 59, 59);
+      } else if (rangeType === "month") {
+        start = new Date(baseDate.getFullYear(), baseDate.getMonth(), 1);
+        end = new Date(baseDate.getFullYear(), baseDate.getMonth() + 1, 0);
+        end.setHours(23, 59, 59);
       }
 
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const table = data.table;
-        const timestamp = data.timestamp;
-        if (!table || !timestamp) return;
-
-        if (data.type === "enter") entries++;
-        if (data.type === "exit") exits++;
-        if (data.type === "wait") waiting++;
-
-        if (tableCounts[table]) {
-          if (data.type === "enter") {
-            tableCounts[table].enter++;
-            if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
-              tableCounts[table].lastEnterTime = timestamp;
-            }
-          }
-          if (data.type === "exit") {
-            tableCounts[table].exit++;
-          }
-        }
-      });
-
-      document.getElementById("count").textContent = entries - exits;
-      document.getElementById("entries").textContent = entries;
-      document.getElementById("exits").textContent = exits;
-      document.getElementById("waitingCount").textContent = waiting;
-
-      updateTableDisplays();
+      return {
+        startISO: start.toISOString(),
+        endISO: end.toISOString(),
+        startDate: start,
+        endDate: end
+      };
     }
 
-    window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-      setInterval(updateTableDisplays, 60000);
+    function getTimeSlots(interval, rangeType, startDate, endDate) {
+      const labels = [];
 
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
+      if (rangeType === "day") {
+        for (let i = 0; i < 24 * 60; i += interval) {
+          const h = Math.floor(i / 60).toString().padStart(2, '0');
+          const m = (i % 60).toString().padStart(2, '0');
+          labels.push(`${h}:${m}`);
+        }
+      } else if (rangeType === "week") {
+        for (let i = 0; i < 7; i++) {
+          const d = new Date(startDate);
+          d.setDate(startDate.getDate() + i);
+          labels.push(`${d.getMonth() + 1}/${d.getDate()}`);
+        }
+      } else if (rangeType === "month") {
+        const dayCount = (endDate - startDate) / (1000 * 60 * 60 * 24);
+        for (let i = 0; i <= dayCount; i++) {
+          const d = new Date(startDate);
+          d.setDate(startDate.getDate() + i);
+          labels.push(`${d.getMonth() + 1}/${d.getDate()}`);
+        }
+}
+
+
+      return labels;
+    }
+
+async function updateChartAndTable() {
+  const date = document.getElementById("datePicker").value;
+  const interval = parseInt(document.getElementById("interval").value);
+  const rangeType = document.getElementById("rangeType").value;
+  if (!date) return;
+
+  const { startISO, endISO, startDate, endDate } = getDateRange(rangeType, date);
+  const labels = getTimeSlots(interval, rangeType, startDate, endDate);
+  const counts = Array(labels.length).fill(0);
+
+  const snapshot = await db.collection("logs")
+    .where("timestamp", ">=", startISO)
+    .where("timestamp", "<=", endISO)
+    .orderBy("timestamp")
+    .get();
+
+  const logs = snapshot.docs.map(doc => doc.data());
+  const enters = logs.filter(log => log.type === "enter");
+  const exits = logs.filter(log => log.type === "exit");
+
+  const details = [];
+
+  enters.forEach(entry => {
+    const table = entry.table;
+    const enterTime = new Date(entry.timestamp);
+    const exit = exits.find(e => e.table === table && new Date(e.timestamp) > enterTime);
+    const exitTime = exit ? new Date(exit.timestamp) : null;
+
+    let index = -1;
+
+    if (rangeType === "day") {
+      const minutes = enterTime.getHours() * 60 + enterTime.getMinutes();
+      index = Math.floor(minutes / interval);
+    } else if (rangeType === "week") {
+      const dayDiff = Math.floor((enterTime - startDate) / (1000 * 60 * 60 * 24));
+      index = dayDiff >= 0 && dayDiff < 7 ? dayDiff : -1;
+    } else if (rangeType === "month") {
+  const dayDiff = Math.floor((enterTime - startDate) / (1000 * 60 * 60 * 24));
+  index = dayDiff >= 0 && dayDiff < counts.length ? dayDiff : -1;
+}
+
+
+    if (index >= 0 && index < counts.length) {
+      counts[index]++;
+    }
+
+    const stay = exitTime ? Math.floor((exitTime - enterTime) / 60000) : null;
+    details.push({
+      date: enterTime.toLocaleDateString("ja-JP", { timeZone: 'Asia/Tokyo' }),
+      table,
+      slot: labels[index] ?? "--",
+      stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
+      enter: enterTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }),
+      exit: exitTime ? exitTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }) : "--"
+    });
+  });
+
+  details.reverse();
+
+  const ctx = document.getElementById("histogram").getContext("2d");
+  if (chart) chart.destroy();
+  chart = new Chart(ctx, {
+    type: "bar",
+    data: {
+      labels: labels,
+      datasets: [{
+        label: "入店者数",
+        data: counts,
+        backgroundColor: "#4a90e2"
+      }]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      scales: {
+        y: {
+          beginAtZero: true,
+          suggestedMax: 10,
+          ticks: {
+            stepSize: 1   
+          }
+        }
+      }
+    }
+  });
+
+  const tbody = document.getElementById("logTableBody");
+  tbody.innerHTML = "";
+  details.forEach(row => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${row.date}</td>
+      <td>${row.slot}</td>
+      <td>${row.table}</td>
+      <td>${row.stay}</td>
+      <td>${row.enter}</td>
+      <td>${row.exit}</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
+
+
+    document.getElementById("datePicker").valueAsDate = new Date();
+
+    document.getElementById("datePicker").addEventListener("change", updateChartAndTable);
+    document.getElementById("interval").addEventListener("change", updateChartAndTable);
+    document.getElementById("rangeType").addEventListener("change", updateChartAndTable);
+    
+
+    document.getElementById("downloadCSV").addEventListener("click", () => {
+      const rows = [["日付", "時間帯", "テーブル番号", "滞在時間", "入店時間", "退店時間"]];
+      const trs = document.querySelectorAll("#logTableBody tr");
+      trs.forEach(tr => {
+        const cols = [...tr.children].map(td => td.textContent);
+        rows.push(cols);
       });
-    };
+
+      const csv = rows.map(row => row.join(",")).join("\n");
+      const blob = new Blob([csv], { type: "text/csv" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "logs.csv";
+      a.click();
+      URL.revokeObjectURL(url);
+    });
+    // ハンバーガー & ドロワー制御
+document.getElementById("hamburger").addEventListener("click", () => {
+  document.getElementById("drawerMenu").classList.toggle("open");
+  document.getElementById("drawerBackdrop").classList.toggle("show");
+});
+
+document.getElementById("drawerBackdrop").addEventListener("click", () => {
+  document.getElementById("drawerMenu").classList.remove("open");
+  document.getElementById("drawerBackdrop").classList.remove("show");
+});
+
+    window.addEventListener("DOMContentLoaded", updateChartAndTable);
   </script>
-</head>
-<body>
-
-  <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </div>
-  </header>
-
-  <main>    
-    <section>
-      <h2>全体状況</h2>
-      <p>現在の入店者数: <span id="count">読み込み中...</span></p>
-      <p>累計入店数: <span id="entries">-</span></p>
-      <p>累計退店数: <span id="exits">-</span></p>
-    </section>
-
-    <section id="tables">
-      <h2>テーブル別 使用状況（時刻）</h2>
-      <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
-      <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
-      <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
-      <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
-      <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
-      <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
-      <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
-      <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
-      <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
-    </section>
-
-    <section>
-      <h2>待機人数</h2>
-      <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
-    </section>
-  </main>
-
 </body>
 </html>
-
