--- a/practice.html
+++ b/practice.html
@@ -2,63 +2,42 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>混雑分析</title>
+  <title>店外待ち管理（店員用）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
     body {
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #2c3e50;
+      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
     }
+
     header {
       background-color: #2c3e50;
       color: white;
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .header-links a:hover {
-      text-decoration: underline;
-    }
 
     .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
+      font-size: 24px;
       cursor: pointer;
-      z-index: 1001;
-    }
-
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
+      background: none;
+      border: none;
+      color: white;
     }
 
     .drawer {
@@ -68,10 +47,10 @@
       width: 250px;
       height: 100%;
       background-color: #34495e;
-      color: white;
-      transition: 0.3s;
+      padding: 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.3);
+      transition: left 0.3s ease;
       z-index: 1000;
-      padding-top: 60px;
     }
 
     .drawer.open {
@@ -80,116 +59,80 @@
 
     .drawer a {
       display: block;
-      padding: 15px 20px;
-      text-decoration: none;
+      margin: 10px 0;
       color: white;
+      text-decoration: none;
       font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
     }
 
     .drawer a:hover {
-      background-color: #2c3e50;
+      text-decoration: underline;
     }
 
-    
     main {
-      padding: 20px;
-      max-width: 1000px;
+      max-width: 800px;
       margin: 0 auto;
+      padding: 30px 20px;
     }
-    .filters {
-      margin-bottom: 20px;
-    }
-    .chart-container {
-      width: 100%;
-      height: 70vh;
-      overflow-x: auto;
-      background: #fff;
-      border-radius: 10px;
-      padding: 10px;
-    }
-    #details {
-      margin-top: 30px;
-      background-color: #f4f4f4;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+
+    h1 {
       text-align: center;
+      padding: 20px;
     }
-    th {
-      background-color: #e0e0e0;
+
+    .queue-item {
+      background: #fff;
+      padding: 15px;
+      margin: 10px auto;
+      max-width: 500px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
+
+    .queue-item p {
+      margin: 5px 0;
+    }
+
+    .btn-group {
+      margin-top: 10px;
+    }
+
+    button {
+      margin-right: 10px;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .btn-enter { background: #2ecc71; color: white; }
+    .btn-exit { background: #e74c3c; color: white; }
+
   </style>
 </head>
 <body>
   <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
     <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
+      <div class="header-title">店内管理システム</div>
+      <button class="menu-button" onclick="toggleDrawer()">☰</button>
     </div>
   </header>
 
-  <main>
-    <h2>混雑傾向分析</h2>
-    <div class="filters">
-      日付: <input type="date" id="datePicker">
-      時間単位: 
-      <select id="interval">
-        <option value="60">60分</option>
-        <option value="30">30分</option>
-        <option value="10">10分</option>
-      </select>
-      表示単位:
-      <select id="rangeType">
-        <option value="day" selected>日</option>
-        <option value="week">週</option>
-        <option value="month">月</option>
-      </select>
-        <button id="downloadCSV">CSVダウンロード</button>
-    </div>
-    <div class="chart-container">
-      <canvas id="histogram"></canvas>
-    </div>
-    <div id="details">
-      <h3>詳細データ</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>日付</th>
-            <th>時間帯</th>
-            <th>テーブル番号</th>
-            <th>滞在時間</th>
-            <th>入店時間</th>
-            <th>退店時間</th>
-          </tr>
-        </thead>
-        <tbody id="logTableBody"></tbody>
-      </table>
-    </div>
-  </main>
+  <!-- ドロワーメニュー -->
+  <div class="drawer" id="drawer">
+    <a href="index.html">ホーム</a>
+    <a href="map.html">店内マップ</a>
+    <a href="histogram.html">混雑状況可視化</a>
+    <a href="histogram.html">待ち管理</a>
+    <a href="#">マニュアル</a>
+    <a href="#">ログアウト</a>
+  </div>
+
+  <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
+  <div id="queueList"></div>
 
   <script>
+    // Firebase 初期化
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
@@ -200,203 +143,94 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-    let chart;
 
-    function getDateRange(rangeType, baseDateStr) {
-      const baseDate = new Date(baseDateStr + "T00:00:00+09:00");
-      let start, end;
+    const ticketMap = {};
 
-      if (rangeType === "day") {
-        start = new Date(baseDate);
-        end = new Date(baseDate);
-        end.setHours(23, 59, 59);
-      } else if (rangeType === "week") {
-        const day = baseDate.getDay();
-        const diff = day === 0 ? 6 : day - 1;
-        start = new Date(baseDate);
-        start.setDate(baseDate.getDate() - diff);
-        end = new Date(start);
-        end.setDate(start.getDate() + 6);
-        end.setHours(23, 59, 59);
-      } else if (rangeType === "month") {
-        start = new Date(baseDate.getFullYear(), baseDate.getMonth(), 1);
-        end = new Date(baseDate.getFullYear(), baseDate.getMonth() + 1, 0);
-        end.setHours(23, 59, 59);
-      }
-
-      return {
-        startISO: start.toISOString(),
-        endISO: end.toISOString(),
-        startDate: start,
-        endDate: end
-      };
+    function formatTime(iso) {
+      const d = new Date(iso);
+      const options = { month: 'numeric', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+      return d.toLocaleString("ja-JP", options);
     }
 
-    function getTimeSlots(interval, rangeType, startDate, endDate) {
-      const labels = [];
+    function renderQueue() {
+      db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+        const allDocs = snapshot.docs;
 
-      if (rangeType === "day") {
-        for (let i = 0; i < 24 * 60; i += interval) {
-          const h = Math.floor(i / 60).toString().padStart(2, '0');
-          const m = (i % 60).toString().padStart(2, '0');
-          labels.push(`${h}:${m}`);
-        }
-      } else if (rangeType === "week") {
-        for (let i = 0; i < 7; i++) {
-          const d = new Date(startDate);
-          d.setDate(startDate.getDate() + i);
-          labels.push(`${d.getMonth() + 1}/${d.getDate()}`);
-        }
-      } else if (rangeType === "month") {
-        const dayCount = (endDate - startDate) / (1000 * 60 * 60 * 24);
-        for (let i = 0; i <= dayCount; i++) {
-          const d = new Date(startDate);
-          d.setDate(startDate.getDate() + i);
-          labels.push(`${d.getMonth() + 1}/${d.getDate()}`);
-        }
-}
+        const visibleDocs = allDocs.filter(doc => {
+          const status = doc.data().status;
+          return status === "waiting" || status === "entered";
+        });
 
+        const list = document.getElementById("queueList");
+        list.innerHTML = "";
 
-      return labels;
-    }
-
-async function updateChartAndTable() {
-  const date = document.getElementById("datePicker").value;
-  const interval = parseInt(document.getElementById("interval").value);
-  const rangeType = document.getElementById("rangeType").value;
-  if (!date) return;
-
-  const { startISO, endISO, startDate, endDate } = getDateRange(rangeType, date);
-  const labels = getTimeSlots(interval, rangeType, startDate, endDate);
-  const counts = Array(labels.length).fill(0);
-
-  const snapshot = await db.collection("logs")
-    .where("timestamp", ">=", startISO)
-    .where("timestamp", "<=", endISO)
-    .orderBy("timestamp")
-    .get();
-
-  const logs = snapshot.docs.map(doc => doc.data());
-  const enters = logs.filter(log => log.type === "enter");
-  const exits = logs.filter(log => log.type === "exit");
-
-  const details = [];
-
-  enters.forEach(entry => {
-    const table = entry.table;
-    const enterTime = new Date(entry.timestamp);
-    const exit = exits.find(e => e.table === table && new Date(e.timestamp) > enterTime);
-    const exitTime = exit ? new Date(exit.timestamp) : null;
-
-    let index = -1;
-
-    if (rangeType === "day") {
-      const minutes = enterTime.getHours() * 60 + enterTime.getMinutes();
-      index = Math.floor(minutes / interval);
-    } else if (rangeType === "week") {
-      const dayDiff = Math.floor((enterTime - startDate) / (1000 * 60 * 60 * 24));
-      index = dayDiff >= 0 && dayDiff < 7 ? dayDiff : -1;
-    } else if (rangeType === "month") {
-  const dayDiff = Math.floor((enterTime - startDate) / (1000 * 60 * 60 * 24));
-  index = dayDiff >= 0 && dayDiff < counts.length ? dayDiff : -1;
-}
-
-
-    if (index >= 0 && index < counts.length) {
-      counts[index]++;
-    }
-
-    const stay = exitTime ? Math.floor((exitTime - enterTime) / 60000) : null;
-    details.push({
-      date: enterTime.toLocaleDateString("ja-JP", { timeZone: 'Asia/Tokyo' }),
-      table,
-      slot: labels[index] ?? "--",
-      stay: stay !== null ? `${Math.floor(stay / 60)}時間${stay % 60}分` : "退店未登録",
-      enter: enterTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }),
-      exit: exitTime ? exitTime.toLocaleString("ja-JP", { timeZone: 'Asia/Tokyo' }) : "--"
-    });
-  });
-
-  details.reverse();
-
-  const ctx = document.getElementById("histogram").getContext("2d");
-  if (chart) chart.destroy();
-  chart = new Chart(ctx, {
-    type: "bar",
-    data: {
-      labels: labels,
-      datasets: [{
-        label: "入店者数",
-        data: counts,
-        backgroundColor: "#4a90e2"
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-      scales: {
-        y: {
-          beginAtZero: true,
-          suggestedMax: 10,
-          ticks: {
-            stepSize: 1   
+        allDocs.forEach((doc, index) => {
+          if (!(doc.id in ticketMap)) {
+            ticketMap[doc.id] = index + 1;
           }
-        }
-      }
-    }
-  });
+        });
 
-  const tbody = document.getElementById("logTableBody");
-  tbody.innerHTML = "";
-  details.forEach(row => {
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${row.date}</td>
-      <td>${row.slot}</td>
-      <td>${row.table}</td>
-      <td>${row.stay}</td>
-      <td>${row.enter}</td>
-      <td>${row.exit}</td>
-    `;
-    tbody.appendChild(tr);
-  });
-}
+        visibleDocs.forEach(doc => {
+          const data = doc.data();
+          const ticketNumber = ticketMap[doc.id] || "?";
 
+          const item = document.createElement("div");
+          item.className = "queue-item";
+          item.innerHTML = `
+            <p><strong>番号札:</strong> ${ticketNumber}</p>
+            <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
+            <p><strong>状態:</strong> ${data.status}</p>
+            <div class="btn-group"></div>
+          `;
 
-    document.getElementById("datePicker").valueAsDate = new Date();
+          const btnGroup = item.querySelector(".btn-group");
 
-    document.getElementById("datePicker").addEventListener("change", updateChartAndTable);
-    document.getElementById("interval").addEventListener("change", updateChartAndTable);
-    document.getElementById("rangeType").addEventListener("change", updateChartAndTable);
+          if (data.status === "waiting") {
+            const btnEnter = document.createElement("button");
+            btnEnter.className = "btn-enter";
+            btnEnter.textContent = "入店通知";
+            btnEnter.onclick = () => {
+              db.collection("queue").doc(doc.id).update({ status: "entered" });
+            };
+            btnGroup.appendChild(btnEnter);
+          }
 
-    document.getElementById("downloadCSV").addEventListener("click", () => {
-      const rows = [["日付", "時間帯", "テーブル番号", "滞在時間", "入店時間", "退店時間"]];
-      const trs = document.querySelectorAll("#logTableBody tr");
-      trs.forEach(tr => {
-        const cols = [...tr.children].map(td => td.textContent);
-        rows.push(cols);
+          if (data.status === "entered") {
+            const btnConfirm = document.createElement("button");
+            btnConfirm.textContent = "入店確定";
+            btnConfirm.style.backgroundColor = "#2980b9";
+            btnConfirm.style.color = "white";
+            btnConfirm.onclick = () => {
+              db.collection("queue").doc(doc.id).update({ status: "confirmed" });
+            };
+            btnGroup.appendChild(btnConfirm);
+          }
+
+          if (data.status === "waiting" || data.status === "entered") {
+            const btnCancel = document.createElement("button");
+            btnCancel.className = "btn-exit";
+            btnCancel.textContent = "キャンセル";
+            btnCancel.onclick = () => {
+              db.collection("queue").doc(doc.id).update({ status: "expired" });
+            };
+            btnGroup.appendChild(btnCancel);
+          }
+
+          list.appendChild(item);
+        });
       });
+    }
 
-      const csv = rows.map(row => row.join(",")).join("\n");
-      const blob = new Blob([csv], { type: "text/csv" });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = "logs.csv";
-      a.click();
-      URL.revokeObjectURL(url);
-    });
+    // ドロワー開閉関数
+    function toggleDrawer() {
+      const drawer = document.getElementById("drawer");
+      drawer.classList.toggle("open");
+    }
 
-    window.addEventListener("DOMContentLoaded", updateChartAndTable);
-
-    document.addEventListener('DOMContentLoaded', function () {
-    document.querySelector('.menu-button').addEventListener('click', function () {
-      document.querySelector('.drawer').classList.toggle('open');
-    });
-  });
-
-
-    
+    window.onload = () => {
+      document.getElementById("mainTitle").style.display = "block";
+      renderQueue();
+    };
   </script>
 </body>
 </html>
